--- a/import.html
+++ b/import.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Import statistik ze zápasu (OCR)</title>
+<title>Import statistik (OCR)</title>
 
 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -12,11 +12,10 @@
 body{margin:0;font-family:Arial;background:#f2f2f2}
 .wrapper{max-width:1200px;margin:0 auto;background:white;padding:30px}
 table{border-collapse:collapse;width:100%;margin-top:20px}
-th,td{border:1px solid #999;padding:6px 8px;text-align:center}
+th,td{border:1px solid #999;padding:6px;text-align:center}
 th{background:#cfe8f7}
 .left{text-align:left}
 .upload{margin:20px 0;padding:20px;border:2px dashed #22a6df;text-align:center}
-button{padding:8px 14px;margin-top:10px}
 </style>
 </head>
 
@@ -27,10 +26,7 @@ button{padding:8px 14px;margin-top:10px}
 
 <div class="upload">
 <input type="file" id="img" accept="image/*">
-<p>Po nahrání obrázku se statistiky uloží do Firebase a zůstanou tam trvale.</p>
 </div>
-
-<button onclick="downloadXML()">Stáhnout XML</button>
 
 <table id="statsTable">
 <thead>
@@ -45,9 +41,6 @@ button{padding:8px 14px;margin-top:10px}
 <th>Vhaz. prohr.</th>
 <th>Čas v útoku</th>
 <th>Čas v obraně</th>
-<th>Přesilovky</th>
-<th>Využ. PP</th>
-<th>OT</th>
 </tr>
 </thead>
 <tbody></tbody>
@@ -57,23 +50,18 @@ button{padding:8px 14px;margin-top:10px}
 
 <script>
 
-/* ================= FIREBASE ================= */
-
+/* FIREBASE */
 const firebaseConfig = {
   apiKey: "AIzaSyD0jDnVNHAzs83g6FGwQT_nQpOCvI4NTNU",
   authDomain: "statistiky-6310a.firebaseapp.com",
   databaseURL: "https://statistiky-6310a-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "statistiky-6310a",
-  storageBucket: "statistiky-6310a.appspot.com",
-  messagingSenderId: "1023222901562",
-  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
+  projectId: "statistiky-6310a"
 };
 
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-/* ================= TEAM MAP ================= */
-
+/* MAPA TÝMŮ */
 const TEAM_MAP = {
   "KLA":"HC Geus Okna Kladno",
   "TRI":"HC Oceláři Třinec",
@@ -81,41 +69,33 @@ const TEAM_MAP = {
   "LIT":"HC Litvínov"
 };
 
-let allData=[];
-
-/* ================= TABULKA ================= */
-
+/* TABULKA */
 function addRow(data){
   const tr=document.createElement("tr");
   tr.innerHTML=data.map((c,i)=>
-    `<td class="${i==0?'left':''}">${c||""}</td>`
+    `<td class="${i==0?'left':''}">${c}</td>`
   ).join("");
   document.querySelector("#statsTable tbody").appendChild(tr);
 }
 
-/* NAČTENÍ DAT PO OTEVŘENÍ */
-db.ref("ocr_statistiky").on("value",(snap)=>{
-  const tbody=document.querySelector("#statsTable tbody");
-  tbody.innerHTML="";
-  allData=[];
+/* NAČTENÍ EXISTUJÍCÍCH DAT */
+async function loadData(){
+  const snap = await db.ref("ocr_statistiky").get();
+  if(!snap.exists()) return;
 
   snap.forEach(child=>{
     const z=child.val();
-    if(!z) return;
     addRow(z.away);
     addRow(z.home);
-    allData.push(z);
   });
-});
+}
+loadData();
 
-/* ================= OCR ================= */
-
+/* OCR */
 function findLine(text,keyword){
   return text.split("\n").find(l=>l.includes(keyword)) || "";
 }
-
 function numbers(line){
-  if(!line) return [];
   return line.match(/[0-9:]+/g) || [];
 }
 
@@ -141,15 +121,13 @@ document.getElementById("img").addEventListener("change", async(e)=>{
   const hits=numbers(findLine(text,"HITS"));
   const faceoffs=numbers(findLine(text,"FACEOFF"));
   const attack=numbers(findLine(text,"TIMEONATTACK"));
-  const pp=numbers(findLine(text,"PP"));
 
   const awayRow=[
     away,"Hosté",
     shots[0]||0,shots[1]||0,
     hits[0]||0,hits[1]||0,
     faceoffs[0]||0,faceoffs[1]||0,
-    attack[0]||"0:00",attack[1]||"0:00",
-    pp[0]||"0/0",pp[0]||"0/0","Ne"
+    attack[0]||"0:00",attack[1]||"0:00"
   ];
 
   const homeRow=[
@@ -157,37 +135,19 @@ document.getElementById("img").addEventListener("change", async(e)=>{
     shots[1]||0,shots[0]||0,
     hits[1]||0,hits[0]||0,
     faceoffs[1]||0,faceoffs[0]||0,
-    attack[1]||"0:00",attack[0]||"0:00",
-    pp[1]||"0/0",pp[1]||"0/0","Ne"
+    attack[1]||"0:00",attack[0]||"0:00"
   ];
 
   await db.ref("ocr_statistiky").push({
     away:awayRow,
-    home:homeRow,
-    time:Date.now()
+    home:homeRow
   });
 
-  alert("Uloženo do Firebase.");
+  addRow(awayRow);
+  addRow(homeRow);
+
+  alert("Uloženo.");
 });
-
-/* ================= XML ================= */
-
-function downloadXML(){
-  let xml='<?xml version="1.0" encoding="UTF-8"?><zapasy>';
-  allData.forEach(z=>{
-    xml+="<zapas>";
-    xml+="<hoste>"+z.away.join("|")+"</hoste>";
-    xml+="<domaci>"+z.home.join("|")+"</domaci>";
-    xml+="</zapas>";
-  });
-  xml+="</zapasy>";
-
-  const blob=new Blob([xml],{type:"text/xml"});
-  const a=document.createElement("a");
-  a.href=URL.createObjectURL(blob);
-  a.download="statistiky.xml";
-  a.click();
-}
 
 </script>
 </body>
